[package]
name = "radar-server"
version = "0.0.7"
edition = "2024"

[dependencies]
hdf5-metno = { version = "0.12.4", features = ["complex"] }
rand = "0.9.2"
rand_distr = "0.5.1"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
rmp-serde = "1.3.1"
serde_with = "3.18.0"
zmq = "0.10.0"
log = "0.4.29"
num-complex = { version = "0.4.6",features = ["default","rand","serde"]}
serde_bytes = "0.11.19"
