[package]
name = "radar-server"
version = "0.0.7"
edition = "2024"

[dependencies]
hdf5-metno = { version = "0.12.4", features = ["complex"] }
rand = "0.10.1"
rand_distr = "0.6.0"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.150"
rmp-serde = "1.3.1"
serde_with = "3.20.0"
zmq = "0.10.0"
num-complex = { version = "0.4.6",features = ["default","rand","serde"]}
serde_bytes = "0.11.19"
fastrand = "2.4.1"

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
codegen-units = 1
lto = "thin"